updated Index page

--- a/index.html
+++ b/index.html
@@ -28,38 +28,37 @@
 
 <body>
     <!-- side nav -->
+    
     <ul class="side-nav" id="mobile-demo">
-        <li>
-            <a href="#home" class="waves-effect waves-light">HOME</a>
-        </li>
-        <li>
-            <a href="#about" class="dropdown-button" data-activates="about2Dropdown" data-belowOrigin="true" data-constrainWidth="false"
-                data-hover="false">ABOUT US</i>
-                <span class="indicator-arow"></span>
-            </a>
-        </li>
-        <li>
-            <a href="#know-more" class="waves-effect waves-light">KNOW MORE </a>
-        </li>
-        <!-- <li>
-            <a class="waves-effect waves-light" href="#testimonials">CONTACT</a>
-        </li> -->
-        <li>
-            <a href="#blog" class="waves-effect waves-light">BLOG</a>
-        </li>
-        <li>
-            <a href="#contacts" class="waves-effect waves-light">CONTACT</a>
-        </li>
-        <li>
-            <a href="#faq" class="waves-effect waves-light">DIAL *841#</a>
-        </li>
+            <li>
+                    <a href="#home" class="waves-effect waves-light">HOME</a>
+                </li>
+                <li>
+                    <a href="#about" class="waves-effect waves-light">ABOUT US</i></a>
+                </li>
+                <li>
+                    <a href="#team" class="waves-effect waves-light">OUR TEAM </a>
+                </li>
+                <!-- <li>
+                    <a class="waves-effect waves-light" href="#testimonials">TESTIMONIALS</a>
+                </li> -->
+    
+                <li>
+                    <a href="#blog" class="waves-effect waves-light">BLOG</a>
+                </li>
+                <li>
+                    <a href="#contacts" class="waves-effect waves-light">CONTACT</a>
+                </li>
+                <li class="green">
+                    <a href="#faq" class="waves-effect waves-light">DIAL *384*315#</a>
+                </li>
     </ul>
     <header>
         <div class="navbar-fixed">
             <nav class="navbar-toggleable-sm fixed-top navbar-light bg-faded site-navigation transparent">
                 <div class="nav-wrapper container">
                     <a href="index.html" class="brand-logo black-text">
-                        <img src="img/kwagric.jpg" style="width:145px; height: 64px;">
+                        <img src="img/logo-kwa.png" style="width:145px; height: 64px;">
                     </a>
                     <a href="#" data-activates="mobile-demo" class="button-collapse">
                         <i class="icon ion-navicon white-text"></i>
@@ -98,8 +97,9 @@
                 <div class="row">
                     <div class="col s12 center">
                         <div class="hero-text">
+                            <div style="background-color: rgba(0, 0, 0, 0.3); padding: 10px;">
                             <h1>
-                                <span class="rotate">Kwagri App| Reliable Agricultural | Mobile Solution</span>
+                                <span class="rotate">Kwagri | Reliable Agricultural | Mobile Solution</span>
                             </h1>
                             <p class="white-text"> Kwagri is a USSD mobile application that will increase communication and productivity amaong
                                 farmers.</p>
@@ -107,6 +107,7 @@
                                 <a href="#!" class="btn-large white-text green">Dail *384*315# </a>
                             </p>
                         </div>
+                    </div>
                     </div>
                     <!--- END COL -->
                 </div>
@@ -125,9 +126,8 @@
                     <div class="section-title">
                         <h2>About Us</h2>
                         <span></span>
-                        <p>KwaraBuild is a community of young tech enthusiasts and developers who are passionate about building
-                            and developing the tech ecosystem focusing on community building and leveraging on innovative
-                            technologies that can sustain the nation.</p>
+                        <p>Kwagri is a USSD mobile application that will increase communication and productivity amaong
+                                farmers.</p>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                                     <i class="fa fa-ticket"></i>
                                 </div>
                                 <h4>Market Place</h4>
-                                <p>Have access to markets, search, order and buy! mAgri gives you access to the agri products and services
+                                <p>Have access to markets, search, order and buy! Kwagri gives you access to the agri products and services
                                     of your choice offered by other farmers across the network.</p>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                         <div class="icon1">
                             <i class="fa fa-star"></i>
                         </div>
-                        <h4>Business Profile</h4>
+                        <h4>Access Loans</h4>
                         <p>Set up a business profile containing your products or services enabling thousands of other farmers
                             to have access to your mobile store!</p>
                     </div>
