--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="#contacts" class="waves-effect waves-light">CONTACT</a>
                 </li>
                 <li class="green">
-                    <a href="#faq" class="waves-effect waves-light">DIAL *384*315#</a>
+                    <a href="https://simulator.africastalking.com:1517/" class="waves-effect waves-light">DIAL *384*315#</a>
                 </li>
     </ul>
     <header>
@@ -84,7 +84,7 @@
                             <a href="#contacts" class="waves-effect waves-light">CONTACT</a>
                         </li>
                         <li class="green">
-                            <a href="#faq" class="waves-effect waves-light">DIAL *384*315#</a>
+                            <a href="https://simulator.africastalking.com:1517/" class="waves-effect waves-light">DIAL *384*315#</a>
                         </li>
                     </ul>
                 </div>
@@ -104,7 +104,7 @@
                             <p class="white-text"> Kwagri is a USSD mobile application that will increase communication and productivity amaong
                                 farmers.</p>
                             <p>
-                                <a href="#!" class="btn-large white-text green">Dail *384*315# </a>
+                                <a href="https://simulator.africastalking.com:1517/" class="btn-large white-text green">Dail *384*315# </a>
                             </p>
                         </div>
                     </div>
