--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Simplifying communication. Kwagri is a USSD mobile application that will increase communication and productivity amaong farmers. It allows farmers to communicate effectively and market their products across the country">
-    <meta name="keywords" content="farmer market nigeria, ussd applicaion nageria, farmer mobile app, agriculture mobile app, kwagri, 841, farming in nigeria"
+    <meta name="description" content="Simplifying communication. Kwagric is a USSD mobile application that will increase communication and productivity amaong farmers. It allows farmers to communicate effectively and market their products across the country">
+    <meta name="keywords" content="farmer market nigeria, ussd applicaion nageria, farmer mobile app, agriculture mobile app, Kwagric, 841, farming in nigeria"
     />
 
-    <title>Kwagri | Reliable agricultural mobile solution for farmers</title>
+    <title>Kwagric | Reliable agricultural mobile solution for farmers</title>
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/simpletextrotator.css">
     <!-- <link rel="stylesheet" href="css/aos.scss"> -->
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/kwagri.css">
+    <link rel="stylesheet" href="css/Kwagric.css">
 </head>
 
 <body>
@@ -99,9 +99,9 @@
                         <div class="hero-text">
                             <div style="background-color: rgba(0, 0, 0, 0.3); padding: 10px;">
                             <h1>
-                                <span class="rotate">Kwagri | Reliable Agricultural | Mobile Solution</span>
+                                <span class="rotate">Kwagric | Reliable Agricultural | Mobile Solution</span>
                             </h1>
-                            <p class="white-text"> Kwagri is a USSD mobile application that will increase communication and productivity amaong
+                            <p class="white-text"> Kwagric is a USSD mobile application that will increase communication and productivity amaong
                                 farmers.</p>
                             <p>
                                 <a href="https://simulator.africastalking.com:1517/" class="btn-large white-text green">Dail *384*315# </a>
@@ -126,7 +126,7 @@
                     <div class="section-title">
                         <h2>About Us</h2>
                         <span></span>
-                        <p>Kwagri is a USSD mobile application that will increase communication and productivity amaong
+                        <p>Kwagric is a USSD mobile application that will increase communication and productivity amaong
                                 farmers.</p>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                                     <i class="fa fa-ticket"></i>
                                 </div>
                                 <h4>Market Place</h4>
-                                <p>Have access to markets, search, order and buy! Kwagri gives you access to the agri products and services
+                                <p>Have access to markets, search, order and buy! Kwagric gives you access to the agri products and services
                                     of your choice offered by other farmers across the network.</p>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                     <div class="section-title center wow zoomIn">
                         <h2>Our Blog</h2>
                         <span></span>
-                        <p>Learn more about Kwagri App and how our company is doing by looking through our blog posts.</p>
+                        <p>Learn more about Kwagric App and how our company is doing by looking through our blog posts.</p>
                     </div>
                 </div>
                 <!-- END COL -->
@@ -337,10 +337,10 @@
                     <div class="single_blog">
                         <div class="blog-text wow fadeInLeft">
                             <h4>
-                                <a href="blog_single.html">Kwagri App </a>
+                                <a href="blog_single.html">Kwagric App </a>
                             </h4>
                             Team Kwarabuild to showcase app at Naija hacks hackaton 2018 demo day. It was indeed a very excited moment for all of us
-                            as we mark another great way towards achieving success. We are determined and focus to make Kwagri
+                            as we mark another great way towards achieving success. We are determined and focus to make Kwagric
                             known across the world.
                             <p>
                                 <strong> 21 October, 2018</strong>
@@ -354,9 +354,9 @@
                     <div class="single_blog">
                         <div class="blog-text wow fadeInLeft">
                             <h4>
-                                <a href="blog_single.html">Kwagri App to support Farmers</a>
+                                <a href="blog_single.html">Kwagric App to support Farmers</a>
                             </h4>
-                            Kwagri App, a reliable mobile solution for farmers to aid communication and increase their productivity is now available
+                            Kwagric App, a reliable mobile solution for farmers to aid communication and increase their productivity is now available
                             for use, with 24/7 customer support. we will also train farmers on how to leverage on technology
                             innovation.
                             <p>
@@ -471,7 +471,7 @@
                             <script>
                                 document.write((new Date()).getFullYear())
                             </script>
-                            <b>Kwagri App</b>. All Rights Reserved</p>
+                            <b>Kwagric App</b>. All Rights Reserved</p>
                     </div>
                     <!--- END FOOTER COPYRIGHT -->
                 </div>
@@ -533,7 +533,7 @@
     <!-- map js -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwIQh7LGryQdDDi-A603lR8NqiF3R_ycA"></script> -->
     <!-- scripts js -->
-    <script src="js/kwagri.js"></script>
+    <script src="js/Kwagric.js"></script>
 
     <script type="text/javascript">
         /*  Textrotator */
