--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     <!-- map js -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwIQh7LGryQdDDi-A603lR8NqiF3R_ycA"></script> -->
     <!-- scripts js -->
-    <script src="js/Kwagric.js"></script>
+    <script src="js/kwagri.js"></script>
 
     <script type="text/javascript">
         /*  Textrotator */
