--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/simpletextrotator.css">
     <!-- <link rel="stylesheet" href="css/aos.scss"> -->
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/Kwagric.css">
+    <link rel="stylesheet" href="css/kwagri.css">
 </head>
 
 <body>
@@ -533,7 +533,7 @@
     <!-- map js -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwIQh7LGryQdDDi-A603lR8NqiF3R_ycA"></script> -->
     <!-- scripts js -->
-    <script src="js/kwagri.js"></script>
+    <script src="js/kwagric.js"></script>
 
     <script type="text/javascript">
         /*  Textrotator */
