--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                         <div class="hero-text">
                             <div style="background-color: rgba(0, 0, 0, 0.3); padding: 10px;">
                             <h1>
-                                <span class="rotate">Kwagric | Reliable Agricultural | Mobile Solution</span>
+                                <span class="rotate">Kwagri | Reliable Agricultural | Mobile Solution</span>
                             </h1>
-                            <p class="white-text"> Kwagric is a USSD mobile application that will increase communication and productivity amaong
+                            <p class="white-text"> Kwagri is a USSD mobile application that will increase communication and productivity amaong
                                 farmers.</p>
                             <p>
                                 <a href="https://simulator.africastalking.com:1517/" class="btn-large white-text green">Dail *384*315# </a>
@@ -126,7 +126,7 @@
                     <div class="section-title">
                         <h2>About Us</h2>
                         <span></span>
-                        <p>Kwagric is a USSD mobile application that will increase communication and productivity amaong
+                        <p>Kwagri is a USSD mobile application that will increase communication and productivity amaong
                                 farmers.</p>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                                     <i class="fa fa-ticket"></i>
                                 </div>
                                 <h4>Market Place</h4>
-                                <p>Have access to markets, search, order and buy! Kwagric gives you access to the agri products and services
+                                <p>Have access to markets, search, order and buy! Kwagri gives you access to the agri products and services
                                     of your choice offered by other farmers across the network.</p>
                             </div>
                         </div>
@@ -326,7 +326,7 @@
                     <div class="section-title center wow zoomIn">
                         <h2>Our Blog</h2>
                         <span></span>
-                        <p>Learn more about Kwagric App and how our company is doing by looking through our blog posts.</p>
+                        <p>Learn more about Kwagri App and how our company is doing by looking through our blog posts.</p>
                     </div>
                 </div>
                 <!-- END COL -->
@@ -337,10 +337,10 @@
                     <div class="single_blog">
                         <div class="blog-text wow fadeInLeft">
                             <h4>
-                                <a href="blog_single.html">Kwagric App </a>
+                                <a href="blog_single.html">Kwagri App </a>
                             </h4>
                             Team Kwarabuild to showcase app at Naija hacks hackaton 2018 demo day. It was indeed a very excited moment for all of us
-                            as we mark another great way towards achieving success. We are determined and focus to make Kwagric
+                            as we mark another great way towards achieving success. We are determined and focus to make Kwagri
                             known across the world.
                             <p>
                                 <strong> 21 October, 2018</strong>
@@ -354,9 +354,9 @@
                     <div class="single_blog">
                         <div class="blog-text wow fadeInLeft">
                             <h4>
-                                <a href="blog_single.html">Kwagric App to support Farmers</a>
+                                <a href="blog_single.html">Kwagri App to support Farmers</a>
                             </h4>
-                            Kwagric App, a reliable mobile solution for farmers to aid communication and increase their productivity is now available
+                            Kwagri App, a reliable mobile solution for farmers to aid communication and increase their productivity is now available
                             for use, with 24/7 customer support. we will also train farmers on how to leverage on technology
                             innovation.
                             <p>
@@ -471,7 +471,7 @@
                             <script>
                                 document.write((new Date()).getFullYear())
                             </script>
-                            <b>Kwagric App</b>. All Rights Reserved</p>
+                            <b>Kwagri App</b>. All Rights Reserved</p>
                     </div>
                     <!--- END FOOTER COPYRIGHT -->
                 </div>
@@ -533,7 +533,7 @@
     <!-- map js -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwIQh7LGryQdDDi-A603lR8NqiF3R_ycA"></script> -->
     <!-- scripts js -->
-    <script src="js/kwagric.js"></script>
+    <script src="js/kwagri.js"></script>
 
     <script type="text/javascript">
         /*  Textrotator */
