--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Simplifying communication. Kwagric is a USSD mobile application that will increase communication and productivity amaong farmers. It allows farmers to communicate effectively and market their products across the country">
+    <meta name="description" content="Simplifying communication. Kwagric is a USSD mobile application that increase communication and productivity amaong farmers. It allows farmers to communicate effectively and market their products across the country">
     <meta name="keywords" content="farmer market nigeria, ussd applicaion nageria, farmer mobile app, agriculture mobile app, Kwagric, 841, farming in nigeria"
     />
 
@@ -101,7 +101,7 @@
                             <h1>
                                 <span class="rotate">Kwagric | Reliable Agricultural | Mobile Solution</span>
                             </h1>
-                            <p class="white-text"> Kwagric is a USSD mobile application that will increase communication and productivity amaong
+                            <p class="white-text"> Kwagric is a USSD mobile application that increase communication and productivity amaong
                                 farmers.</p>
                             <p>
                                 <a href="https://simulator.africastalking.com:1517/" class="btn-large white-text green">Dail *384*315# </a>
