--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="section-title">
                         <h2>About Us</h2>
                         <span></span>
-                        <p>Kwagric is a USSD mobile application that will increase communication and productivity amaong
+                        <p>Kwagric is a USSD mobile application that increase communication and productivity amaong
                                 farmers.</p>
                     </div>
                 </div>
@@ -138,8 +138,7 @@
                                     <i class="fa fa-ticket"></i>
                                 </div>
                                 <h4>Market Place</h4>
-                                <p>Have access to markets, search, order and buy! Kwagric gives you access to the agri products and services
-                                    of your choice offered by other farmers across the network.</p>
+                                <p>Have access to markets, order and buy! Kwagric gives you access to order for farm product via USSD.</p>
                             </div>
                         </div>
                         <!-- END COL -->
@@ -161,8 +160,7 @@
                             <i class="fa fa-star"></i>
                         </div>
                         <h4>Access Loans</h4>
-                        <p>Set up a business profile containing your products or services enabling thousands of other farmers
-                            to have access to your mobile store!</p>
+                        <p>Kwagric allow farmers request for loans at easy using USSD</p>
                     </div>
                 </div>
                 <!-- END COL -->
