--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <h1>
                                 <span class="rotate">Kwagric | Reliable Agricultural | Mobile Solution</span>
                             </h1>
-                            <p class="white-text"> Kwagric is a USSD mobile application that increase communication and productivity amaong
+                            <p class="white-text"> Kwagric is a USSD mobile application that increase communication and productivity among
                                 farmers.</p>
                             <p>
                                 <a href="https://simulator.africastalking.com:1517/" class="btn-large white-text green">Dail *384*315# </a>
